--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "license": "MIT",
   "scripts": {
     "lint": "coffeelint -f build/coffeelint.json lib",
-    "build": "coffee --bare --compile lib",
+    "build": "coffee --bare --compile --no-header lib",
     "clean": "rm -rf ./lib/*.js",
     "prepublish": "npm run build",
     "postpublish": "npm run clean",
     "test": "mocha --compilers coffee:coffee-script/register --reporter spec --bail --check-leaks test/lib",
     "test4": "nave use 4.8 npm test",
     "test6": "nave use 6.10 npm test",
-    "test7": "nave use 7.9 npm test",
+    "test7": "nave use 7.10 npm test",
     "test-all": "npm run test4 && npm run test6 && npm run test7",
     "precoverage": "npm run clean",
     "coverage": "istanbul cover -x 'build/**' _mocha -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
@@ -34,15 +34,15 @@
   "bugs": "http://github.com/elidoran/unstring/issues",
   "devDependencies": {
     "coffee-coverage": "^2.0.1",
-    "coffee-script": "^1.12.5",
+    "coffee-script": "^1.12.6",
     "coffeelint": "^1.16.0",
-    "coveralls": "^2.13.0",
+    "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
+    "mocha": "^3.4.1",
     "mocha-lcov-reporter": "^1.3.0"
   },
   "dependencies": {
-    "@flatten/array": "^1.0.1"
+    "@flatten/array": "^1.1.1"
   },
   "engines": {
     "node": ">=4"
